Adds basic URL wiring and updates swagger def for tag support
